# FRET

./: .gitignore  .gitmodules  README.md  flake.nix  one_time_setup.sh  run_eval.sh  shell.nix
Docker/: Containerfile  README.md  fret.list  prep_sys.sh
FRET/: ARCH.md  Cargo.toml
FRET/benchmark/: Makefile  Snakefile  target_symbols.csv
FRET/benchmark/scripts/: bench_rename.sh  build_all_bins.sh  build_all_demos.sh  logtail.sh  plot_all_benchmarks.sh  plot_all_icounttrace.sh  plot_all_stgsizes.sh  plot_all_traces.sh  plot_diffs.r  plot_sqlite.r  plot_stgsize.r  plot_stgsize_multi.r
FRET/example/: build.sh  main.c  mps2_m3.ld  startup.c
FRET/src/: cli.rs  config.rs  debug.rs  fuzzer.rs  lib.rs  main.rs  templates.rs
FRET/src/systemstate/: ARCH.md  feedbacks.rs  helpers.rs  mod.rs  mutational.rs  report.rs  schedulers.rs  stg.rs
FRET/src/systemstate/target_os/: mod.rs
FRET/src/systemstate/target_os/freertos/: bindings.rs  config.rs  mod.rs  qemu_module.rs
FRET/src/systemstate/target_os/osek/: bindings.rs  config.rs  mod.rs  qemu_module.rs
FRET/src/time/: clock.rs  mod.rs  qemustate.rs  worst.rs
FRET/tests/: iterate.sh  run_test.sh  times.py
FRET/tests/wcrts/: polycopter_seq_dataflow_full.edit  release_seq_int.edit  waters_seq_int.edit
FRET/tools/: build.sh
FRET/tools/edge_compare/: Cargo.toml
FRET/tools/edge_compare/src/: main.rs
FRET/tools/graph2viz/: Cargo.toml  Makefile
FRET/tools/graph2viz/src/: main.rs
FRET/tools/input_serde/: Cargo.toml
FRET/tools/input_serde/src/: main.rs
FRET/tools/number_cruncher/: Cargo.toml
FRET/tools/number_cruncher/src/: main.rs
FRET/tools/state2gantt/: Cargo.toml  gantt_driver  plot_gantt.r
FRET/tools/state2gantt/src/: main.rs
OSEKOS/Demo/TRICORE_TC4x_QEMU_GCC/: Makefile  README.md  linker.ld  main.c  main_blinky.c  syscall.c
OSEKOS/Demo/TRICORE_TC4x_QEMU_GCC/init/: crt0.S  startup.c
OSEKOS/Source/: alarm.c  event.c  resource.c  tasks.c
OSEKOS/Source/include/: osek.h
OSEKOS/Source/portable/GCC/ARM_CM3/: port.c  portmacro.h
OSEKOS/Source/portable/TriCore/AURIX_TC4x/: port.c  portmacro.h
artifact-evaluation/: ae.bib  artifact-eval.md
libafl/: cpu.h  exit.h  gdb.h  hook.h  interrupt_injection.h  jit.h  qemu_snapshot.h  system.h  syx-misc.h  tcg.h  user.h  utils.h
libafl/hooks/: cpu_run.h  syscall.h  thread.h
libafl/hooks/tcg/: backdoor.h  block.h  cmp.h  edge.h  instruction.h  jmp.h  read_write.h
libafl/syx-snapshot/: channel-buffer-writeback.h  device-save.h  syx-cow-cache.h  syx-snapshot.h
libafl_qemu/: Cargo.toml  build.rs  build_linux.rs
libafl_qemu/libafl_qemu_build/: Cargo.toml  README.md
libafl_qemu/libafl_qemu_build/src/: bindings.rs  build.rs  lib.rs
libafl_qemu/libafl_qemu_sys/: Cargo.toml  build.rs  build_linux.rs
libafl_qemu/libafl_qemu_sys/src/: lib.rs  systemmode.rs  usermode.rs
libafl_qemu/libafl_qemu_sys/src/bindings/: mod.rs  x86_64_stub_bindings.rs
libafl_qemu/libqasan/: Makefile  dlmalloc.c  hooks.c  libqasan.c  libqasan.h  malloc.c  map_macro.h  mmap.c  patch.c  qasan.h
